[gd_scene load_steps=11 format=2]

[ext_resource path="res://Entities/Projectiles/Projectile/Projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Projectiles/BarrierProjectile/BarrierProjectile.gd" type="Script" id=2]
[ext_resource path="res://Entities/Projectiles/Shapes/rectangle-64-open.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("RepeatingSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 8, 32 )

[sub_resource type="Curve" id=3]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.112971, -600 ), 21.1973, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.246862, 1 ), 0.0, -0.0143941, 0, 0, Vector2( 0.761506, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
resource_local_to_scene = true
lifetime_randomness = 0.32
emission_shape = 2
emission_box_extents = Vector3( 8, 32, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.15
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -100.0
linear_accel_random = 0.3
linear_accel_curve = SubResource( 4 )
angle = 113.4
angle_random = 0.53
scale = 1.5
scale_random = 0.7
scale_curve = SubResource( 6 )

[node name="Projectile" instance=ExtResource( 1 )]
script = ExtResource( 2 )
damage = 25
points = 0.2

[node name="AimingShadow" type="ColorRect" parent="." index="0"]
light_mask = 2
margin_left = -8.0
margin_top = -32.0
margin_right = 8.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 8, 32 )
color = Color( 1, 1, 1, 0.156863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RepeatingSprite" type="Sprite" parent="." index="2"]
light_mask = 2
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 24, 32, 16, 64 )

[node name="AnimationPlayer" parent="." index="3"]
anims/disappear = SubResource( 1 )

[node name="ProjectileArea" parent="." index="4"]
visible = false

[node name="Hitbox" parent="ProjectileArea" index="0"]
shape = SubResource( 2 )

[node name="ExplostionParticles" parent="." index="6"]
amount = 15
process_material = SubResource( 7 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
